[package]
name = "s3-presign"
version = "0.0.2"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/andelf/s3-presign"
documentation = "https://docs.rs/s3-presign"
homepage = "https://github.com/andelf/s3-presign"
categories = ["Web programming", "Authentication"]
description = "A minimal library for generating presigned URLs for Amazon S3 compatible services"
keywords = ["s3", "authentication", "web", "s3v4"]
readme = "README.md"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
url = "2"
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
percent-encoding = "2"
